# eggpm

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
examples/: eggpm.conf  hello-2.12.1-darwin.eggpm  hello-2.12.1-x86_64-darwin.eggpm  hello-2.12.1.eggpm  libiconv-1.17-x86_64-darwin.eggpm  repo
share/eggpm/: gnu-configure.sh  gnu.sh
src/: Makefile.am  build.c  build.h  conf.c  conf.h  database.c  database.h  install.c  install.h  main.c  parser.c  parser.h  repo.c  repo.h  utils.c  utils.h
